# PlPlotLib

./: CMakeLists.txt  Makefile  README.md  index.html  params.json  project.geany  project.md  search.html
doc/: index.html  search.html
doc/lists/: files.html  modules.html  procedures.html
doc/module/: kinds_mod.html  plplot_mod.html
doc/page/: index.html
doc/proc/: bar.html  barh.html  colorbar.html  contour.html  contourf.html  endswith.html  figure.html  fillbetween.html  getcolorcode.html  getfillcode.html  getlinestylecode.html  getsymbolcode.html  labels.html  legend.html  mixval.html  plot.html  printtypes.html  quiver.html  resetpen.html  scatter.html  setcolor.html  setcolormap.html  setfillpattern.html  setindexedcolors.html  setlinestyle.html  setup.html  show.html  startswith.html  subplot.html  testcontour.html  testlegend.html  testplot.html  testquiver.html  testscatter.html  ticks.html  xylim.html
doc/program/: main_prg.html
doc/sourcefile/: kinds.f90.html  main.f90.html  plplot.f90.html
doc/src/: main.f90  plplot.f90
doc/tipuesearch/: tipuesearch_content.js
graphs/: call~~graph~~CallGraph  interface~~mixval~~CalledByGraph  module~~examples_mod~~UsedByGraph  module~~examples_mod~~UsesGraph  module~~graph~~ModuleGraph  module~~kinds_mod~~UsedByGraph  module~~plplotlib_mod~~UsedByGraph  module~~plplotlib_mod~~UsesGraph  proc~~barh~~CalledByGraph  proc~~barh~~CallsGraph  proc~~bar~~CalledByGraph  proc~~bar~~CallsGraph  proc~~bindata~~CalledByGraph  proc~~bindata~~CallsGraph  proc~~box~~CalledByGraph  proc~~box~~CallsGraph  proc~~colorbar~~CalledByGraph  proc~~colorbar~~CallsGraph  proc~~contourf~~CalledByGraph  proc~~contourf~~CallsGraph  proc~~contour~~CalledByGraph  proc~~contour~~CallsGraph  proc~~dobar~~CalledByGraph  proc~~dobar~~CallsGraph  proc~~docontour~~CalledByGraph  proc~~docontour~~CallsGraph  proc~~doerror~~CalledByGraph  proc~~doerror~~CallsGraph  proc~~doexamples~~CalledByGraph  proc~~doexamples~~CallsGraph  proc~~dofillbetween~~CalledByGraph  proc~~dofillbetween~~CallsGraph  proc~~dohist~~CalledByGraph  proc~~dohist~~CallsGraph  proc~~dolegend~~CalledByGraph  proc~~dolegend~~CallsGraph  proc~~doplot~~CalledByGraph  proc~~doplot~~CallsGraph  proc~~doquiver~~CalledByGraph  proc~~doquiver~~CallsGraph  (+56 more)
interface/: flatten.html  mixval.html  span.html
lists/: files.html  modules.html  procedures.html  programs.html
module/: examples_mod.html  kinds_mod.html  plplotlib_mod.html  utilities_mod.html
page/: arguments.html  changelog.html  escapeCodes.html  index.html  license.html
pages/: basic.md  escapeCodes.md  index.md
proc/: bar.html  barh.html  bindata.html  box.html  colorbar.html  colorbar2.html  colorize.html  contour.html  contourf.html  dobar.html  docontour.html  doerror.html  doexamples.html  dofillbetween.html  dohist.html  dolegend.html  dologplot.html  doplot.html  doquiver.html  doscatter.html  dosurface.html  endswith.html  errorbar.html  f.html  figure.html  fillbetween.html  fillbetweenx.html  hist.html  int2char.html  labels.html  legend.html  linspace.html  makelogo.html  mean.html  meshgridx.html  meshgridy.html  mixval.html  plot.html  plot3.html  printtypes.html  (+30 more)
program/: animate_prg.html  basic_prg.html  examples_prg.html  logo_prg.html  main_prg.html
sourcefile/: animate.f90.html  basic.f90.html  examples.f90.html  kinds.f90.html  logo.f90.html  main.f90.html  plplotlib.f90.html  utilities.f90.html
src/: animate.f90  basic.f90  examples.f90  kinds.f90  logo.f90  main.f90  plplot.f90  plplotlib.f90  test.f90  utilities.f90
tipuesearch/: tipuesearch_content.js
